# wizard

./: Cargo.toml
src/: lib.rs  main.rs
src/cards/: card.rs  deck.rs  mod.rs  normal_card.rs  rank.rs  special_card.rs  suit.rs
src/client/: client.rs  human_client.rs  mod.rs  random_client.rs
src/game/: wizard.rs
src/network/: action.rs  mod.rs  network.rs
src/players/: player.rs
src/server/: server.rs
