[package]
name = "wizard"
version = "0.1.0"
edition = "2021"

[lib]
name = "wizard"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"


[dependencies]
anyhow = "1.0.95"
local-ip-address = "0.6.3"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["strum_macros"] }
strum_macros = "0.26.4"
